# rust_di

./: .env.example  Cargo.toml  Readme.md  init.sql
src/: lib.rs  main.rs
src/config/: app_config.rs  mod.rs
src/config/databases/: mysql.rs
src/infrastructure/: mod.rs  schema.rs
src/infrastructure/repositories/: curd.rs  mod.rs  repository.rs
src/models/: error.rs  mod.rs  post.rs  user.rs
src/repositories/: mod.rs  mysql_repository.rs
src/repositories/post_repository/: interface.rs  mod.rs  post_repository.rs
src/repositories/user_repository/: interface.rs  mod.rs  user_repository.rs
src/routes/: auth_route.rs  mod.rs  post_route.rs
src/routes/dto/: auth.rs
src/services/: mod.rs
src/services/post_service/: interface.rs  mod.rs  post_service.rs
src/services/user_service/: interface.rs  mod.rs  user_service.rs
src/utils/: logging.rs
